--- a/index.html
+++ b/index.html
@@ -2,28 +2,66 @@
 <html lang="tr">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Kokteyl Menüm</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Cocktail Menü</title>
   <link rel="stylesheet" href="style.css" />
-  <script src="script.js" defer></script>
 </head>
 <body>
-  <h1>🍹 Kokteyl Menüm</h1>
-  <p>Elindeki malzemeleri seç:</p>
+  <button id="temaBtn">🌙</button>
 
-  <div id="malzemeler">
-    <label><input type="checkbox" value="rom"> Rom</label>
-    <label><input type="checkbox" value="lime"> Lime</label>
-    <label><input type="checkbox" value="soda"> Soda</label>
-    <label><input type="checkbox" value="nane"> Nane</label>
-    <label><input type="checkbox" value="şeker"> Şeker</label>
-    <label><input type="checkbox" value="tekila"> Tekila</label>
-    <label><input type="checkbox" value="triple sec"> Triple Sec</label>
+  <div class="container">
+    <h1>Cocktail Menüsü</h1>
+
+    <section>
+      <h2>Alkoller</h2>
+      <div class="kategori"><input type="checkbox" id="vodka"><label for="vodka">Vodka</label></div>
+      <div class="kategori"><input type="checkbox" id="gin"><label for="gin">Gin</label></div>
+      <div class="kategori"><input type="checkbox" id="rom"><label for="rom">Rom</label></div>
+      <div class="kategori"><input type="checkbox" id="tekila"><label for="tekila">Tekila</label></div>
+      <div class="kategori"><input type="checkbox" id="viski"><label for="viski">Viski</label></div>
+    </section>
+
+    <section>
+      <h2>Likörler</h2>
+      <div class="kategori"><input type="checkbox" id="triple-sec"><label for="triple-sec">Triple Sec</label></div>
+      <div class="kategori"><input type="checkbox" id="kahve-likoru"><label for="kahve-likoru">Kahve Likörü</label></div>
+      <div class="kategori"><input type="checkbox" id="amaretto"><label for="amaretto">Amaretto</label></div>
+      <div class="kategori"><input type="checkbox" id="irish-cream"><label for="irish-cream">Irish Cream</label></div>
+    </section>
+
+    <section>
+      <h2>Meyveler / Sular</h2>
+      <div class="kategori"><input type="checkbox" id="lime"><label for="lime">Lime</label></div>
+      <div class="kategori"><input type="checkbox" id="lemon"><label for="lemon">Limon</label></div>
+      <div class="kategori"><input type="checkbox" id="portakal"><label for="portakal">Portakal</label></div>
+      <div class="kategori"><input type="checkbox" id="ananas"><label for="ananas">Ananas Suyu</label></div>
+      <div class="kategori"><input type="checkbox" id="nar"><label for="nar">Nar Suyu</label></div>
+      <div class="kategori"><input type="checkbox" id="vişne"><label for="vişne">Vişne</label></div>
+    </section>
+
+    <section>
+      <h2>Karıştırıcılar</h2>
+      <div class="kategori"><input type="checkbox" id="soda"><label for="soda">Soda</label></div>
+      <div class="kategori"><input type="checkbox" id="tonik"><label for="tonik">Tonik</label></div>
+      <div class="kategori"><input type="checkbox" id="cola"><label for="cola">Cola</label></div>
+      <div class="kategori"><input type="checkbox" id="enerji"><label for="enerji">Enerji İçeceği</label></div>
+    </section>
+
+    <section>
+      <h2>Garnitürler</h2>
+      <div class="kategori"><input type="checkbox" id="nane"><label for="nane">Nane</label></div>
+      <div class="kategori"><input type="checkbox" id="şeker"><label for="şeker">Toz Şeker</label></div>
+      <div class="kategori"><input type="checkbox" id="buz"><label for="buz">Buz</label></div>
+      <div class="kategori"><input type="checkbox" id="zeytin"><label for="zeytin">Zeytin</label></div>
+      <div class="kategori"><input type="checkbox" id="kiraz"><label for="kiraz">Kokteyl Kirazı</label></div>
+    </section>
+
+    <section>
+      <h2>Uygun Kokteyller</h2>
+      <div id="sonuclar">Henüz seçim yapılmadı.</div>
+    </section>
   </div>
 
-  <button onclick="kokteylleriGoster()">Kokteylleri Göster</button>
-
-  <h2>Sonuç:</h2>
-  <div id="sonuclar"></div>
+  <script src="script.js"></script>
 </body>
 </html>
