--- a/guest.html
+++ b/guest.html
@@ -1,30 +1,14 @@
 <!DOCTYPE html>
-<html lang="tr">
+<html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Misafir Kokteyl Menüsü</title>
-  <style>
-    body {
-      font-family: sans-serif;
-      background: #f0f0f0;
-      color: #333;
-      padding: 2rem;
-    }
-    .cocktail {
-      background: white;
-      padding: 1rem;
-      margin-bottom: 1rem;
-      border-radius: 5px;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-    }
-  </style>
+  <meta charset="UTF-8">
+  <title>Kokteyller</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Yapabileceğiniz Kokteyller</h1>
-  <div id="cocktailList">Yükleniyor...</div>
+  <h1>Yapılabilecek Kokteyller</h1>
+  <div id="guest-results">Yükleniyor...</div>
 
   <script src="guest.js"></script>
 </body>
 </html>
-
